# fednestd

./: .cursorrules  Prd.md  README.md  milestones.md  pyproject.toml  research.md
.cursor/rules/: fednestd-core.mdc  fednestd-docs.mdc  fednestd-nested-federated.mdc  fednestd-python.mdc  fednestd-tests.mdc
.github/workflows/: ci.yml
docs/: deployment-plan.md  milestones.md
src/fednestd/: __main__.py  cli.py
src/fednestd/config/: loaders.py
src/fednestd/federation/: client.py  server.py
src/fednestd/infra/: deployment_profiles.py
src/fednestd/infra/charts/: gpu-operator.sh  namespace.yaml
src/fednestd/infra/charts/cert/: certificate-test.yaml  install.sh
src/fednestd/infra/charts/kafka/: certificate.yaml  install-bitnami.sh  install-strimzi.sh  install.sh  values.yaml
src/fednestd/infra/charts/minio/: install.sh  secrets.yaml  services.yaml  values.yaml
src/fednestd/messaging/: kafka_client.py  messaging.yaml  topics.py
src/fednestd/networking/: haproxy_config.py  vpn.py
src/fednestd/observability/: logging.py
src/fednestd/training/: aggregation.py  tier1_trainer.py  tier2_trainer.py
tests/: test_cli.py  test_config.py
